--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,9 @@
 body {
     background-color: lightgray;
 }
+
+td.align-center {
+    text-align: center !important;
+}
+
+@import "bootstrap/dist/css/bootstrap.min.css";
